# C2EO-draft

./: README.md
AST-demo-examples/ast-analyzer/: CMakeLists.txt  visitors.cpp  visitors.h
AST-demo-examples/libastmatchers/loop-convert-01/: CMakeLists.txt  main.cpp
AST-demo-examples/libastmatchers/loop-convert-02/: main.cpp
AST-demo-examples/libastmatchers/loop-convert-03/: CMakeLists.txt  main.cpp
AST-demo-examples/libtooling/01-find-class-decls/: CMakeLists.txt  main.cpp
AST-demo-examples/libtooling/02-myRecVisitor/: CMakeLists.txt  main.cpp  test.cpp
C-sources/yar/: functions.c  split.py  vars.c  vars2.c  vars_ptr.c
EO-sources/c2eo/eo/: app.eo
EO-sources/tests-eo/test01/eo/: app.eo
